--- a/.bluprintrc
+++ b/.bluprintrc
@@ -12,7 +12,8 @@
         "name": "greeting",
         "message": "Wut"
       }
-    ]
+    ],
+    "inject": ["Hi"]
   }, {
     "action": "move",
     "paths": ["moveme/", "moved/"]
